[package]
name = "rvff-cxx"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
rvff = { git = "https://github.com/arma-tools/rvff.git", rev = "f8f248d2a6f286eb2071d515f127e219caced5f6" }

cxx = "1.0"

anyhow = "1.0.70"

[build-dependencies]
cxx-build = "1.0"
