[package]
name = "rvff_cxx"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
rvff = { package = "arma-file-formats", git = "https://github.com/fank/arma-file-formats-rs.git", branch = "feat/odol-v75-support" }

byteorder = "1.5"
cxx = "1.0"

anyhow = "1.0.70"

[build-dependencies]
cxx-build = "1.0"
